--- a/section_3_css_change_application/index.html
+++ b/section_3_css_change_application/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
@@ -43,7 +43,6 @@
           value="0"
           data-sizing="px"
         />
-      </div>
         <label for="blur">Blur</label>
         <input
           type="range"
@@ -55,7 +54,10 @@
           data-sizing="px"
         />
       </div>
-      <img src="https://media.istockphoto.com/id/941009200/vi/anh/h%C6%B0%C6%A1u-%C4%91%E1%BB%8F-h%C6%B0%C6%A1u-%C4%91%E1%BB%8F-trong-lush-green-fairytale-growth-concept-foggy-forest-landscape-image.jpg?s=612x612&w=is&k=20&c=fEQ2w4K9GXY7mG4yLWsZwluBWmyWSOeWDcYMTDz6en4=" alt="Sample Image">
+      <img
+        src="https://media.istockphoto.com/id/941009200/vi/anh/h%C6%B0%C6%A1u-%C4%91%E1%BB%8F-h%C6%B0%C6%A1u-%C4%91%E1%BB%8F-trong-lush-green-fairytale-growth-concept-foggy-forest-landscape-image.jpg?s=612x612&w=is&k=20&c=fEQ2w4K9GXY7mG4yLWsZwluBWmyWSOeWDcYMTDz6en4="
+        alt="Sample Image"
+      />
     </div>
     <script src="script.js"></script>
   </body>
