add HTML structure for counter application

--- a/section_4_counter_application/index.html
+++ b/section_4_counter_application/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="container">
+      <div class="card">
+        <h1>Counter Application</h1>
+        <div class="counter">
+          <h1 class="counter-machine">0</h1>
+        </div>
+        <div class="btn-group">
+          <button class="btn-counter decrease-btn">Decrease</button>
+          <button class="btn-counter increase-btn">Increase</button>
+        </div>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
