--- a/section_4_counter_application/index.html
+++ b/section_4_counter_application/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div class="card">
-        <h1>Counter Application</h1>
+        <h1 class="heading">Counter Application</h1>
         <div class="counter">
           <h1 class="counter-machine">0</h1>
         </div>
