--- a/section_6_random_number_generator/index.html
+++ b/section_6_random_number_generator/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="container">
+      <h1>Random Number Generator</h1>
+      <button id="generateButton">Generate Random Number</button>
+      <p id="result">0</p>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
