--- a/section_7_write_a_message/index.html
+++ b/section_7_write_a_message/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="container">
+      <h1>Write a Message</h1>
+      <form id="form">
+        <input
+          type="text"
+          id="message"
+          class="message"
+          placeholder="Type your message here"
+        />
+        <button type="submit" class="submit">Submit</button>
+        <p id="invalid-message">Please enter a message</p>
+        <p class="message-content"></p>
+      </form>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
