--- a/section_7_write_a_message/index.html
+++ b/section_7_write_a_message/index.html
@@ -17,7 +17,7 @@
           placeholder="Type your message here"
         />
         <button type="submit" class="submit">Submit</button>
-        <p id="invalid-message">Please enter a message</p>
+        <p class="invalid-message">Please enter a message</p>
         <p class="message-content"></p>
       </form>
     </div>
