--- a/section_8_code_editor_project/index.html
+++ b/section_8_code_editor_project/index.html
@@ -14,6 +14,29 @@
     />
   </head>
   <body>
+    <div class="container">
+      <div class="left">
+        <div class="box">
+          <label for=""> <i class="fa-brands fa-html5"></i>HTML</label>
+          <textarea id="html-code" onkeyup="run()"></textarea>
+        </div>
+
+        <div class="box">
+          <label for=""> <i class="fa-brands fa-css3-alt"></i>CSS</label>
+          <textarea id="css-code" onkeyup="run()"></textarea>
+        </div>
+
+        <div class="box">
+          <label for=""> <i class="fa-brands fa-js"></i>JavaScript</label>
+          <textarea id="js-code" onkeyup="run()"></textarea>
+        </div>
+      </div>
+
+      <div class="right">
+        <label for=""> <i class="fa-solid fa-play"></i>Output</label>
+        <textarea id="output" onkeyup="run()"></textarea>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
