--- a/section_8_code_editor_project/index.html
+++ b/section_8_code_editor_project/index.html
@@ -34,7 +34,7 @@
 
       <div class="right">
         <label for=""> <i class="fa-solid fa-play"></i>Output</label>
-        <textarea id="output" onkeyup="run()"></textarea>
+        <iframe id="output" onkeyup="run()"></iframe>
       </div>
     </div>
     <script src="script.js"></script>
