Section 9: add HTML structure for Day of the Week project

--- a/section_9_day_of_the_week/index.html
+++ b/section_9_day_of_the_week/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="container">
+      <h1>Today is:</h1>
+      <div class="weekday">
+        <span id="weekday">Display day of the week</span><br />
+        <span id="quote">A quote</span>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
