Section 9: add CSS styles for layout

--- a/section_9_day_of_the_week/index.html
+++ b/section_9_day_of_the_week/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <h1>Today is:</h1>
       <div class="weekday">
-        <span id="weekday">Display day of the week</span><br />
+        <span id="weekday">Display day</span><br />
         <span id="quote">A quote</span>
       </div>
     </div>
