Section 10: add CSS styles for Stopwatch Application layout and button interactions

--- a/section_10_stopwatch_application/index.html
+++ b/section_10_stopwatch_application/index.html
@@ -13,6 +13,7 @@
     <h1>Stopwatch</h1>
     <div class="time">
       <span class="second">00</span>
+      <span>:</span>
       <span class="milli">00</span>
     </div>
 
