Section 11: add HTML structure for Weight Converter Application

--- a/section_11_weight_converter/index.html
+++ b/section_11_weight_converter/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="container">
+      <form action="">
+        <h1>Weight Converter</h1>
+        <p>You can convert your WEIGHT from Kilograms to Pounds here.</p>
+        <label for="weight-converter">Kilograms:</label>
+        <input type="text" step="5" placeholder="Enter your weight in Kgs" />
+        <p>Your weight in Pounds: <span id="convertedWeight"></span></p>
+      </form>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
