--- a/section_12_color_changer/index.html
+++ b/section_12_color_changer/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="button-container">
+      <button class="button" id="grey">Grey</button>
+      <button class="button" id="yellow">Yellow</button>
+      <button class="button" id="white">White</button>
+      <button class="button" id="blue">Blue</button>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
