--- a/section_13_form_validation/index.html
+++ b/section_13_form_validation/index.html
@@ -7,6 +7,38 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="container">
+      <div class="header">
+        <h1>Create Account</h1>
+      </div>
+
+      <form id="form" class="form">
+        <div class="control-form">
+          <label for="username">Username</label>
+          <input type="text" id="username" placeholder="liltuaan" />
+          <small class="error"></small>
+        </div>
+        <div class="control-form">
+          <label for="email">Email</label>
+          <input type="email" id="email" placeholder="liltuaan@gmail.com" />
+          <small class="error"></small>
+        </div>
+        <div class="control-form">
+          <label for="password">Password</label>
+          <input type="password" id="password" placeholder="Password" />
+          <small class="error"></small>
+        </div>
+        <div class="control-form">
+          <label for="passwordCheck">Password Check</label>
+          <input
+            type="password"
+            id="passwordCheck"
+            placeholder="Password Check"
+          />
+          <small class="error"></small>
+        </div>
+      </form>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
