Section 13: add CSS styles for Form Validation Project

--- a/section_13_form_validation/index.html
+++ b/section_13_form_validation/index.html
@@ -37,6 +37,7 @@
           />
           <small class="error"></small>
         </div>
+        <button type="submit">Submit</button>
       </form>
     </div>
     <script src="script.js"></script>
